--- a/CefSharp.Wpf.Example/App.xaml
+++ b/CefSharp.Wpf.Example/App.xaml
@@ -1,10 +1,10 @@
-﻿<Application x:Class="CefSharp.Wpf.Example.App"
+<Application x:Class="CefSharp.Wpf.Example.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:CefSharp.Wpf.Example.Controls"
              xmlns:view="clr-namespace:CefSharp.Wpf.Example.Views"
              xmlns:viewModel="clr-namespace:CefSharp.Wpf.Example.ViewModels"
-             StartupUri="MainWindow.xaml">
+             StartupUri="SimpleMainWindow.xaml">
     <Application.Resources>
         <Style TargetType="{x:Type controls:NonReloadingTabControl}">
             <Setter Property="Template">
