--- a/CefSharp.Wpf.Example/SimpleMainWindow.xaml
+++ b/CefSharp.Wpf.Example/SimpleMainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CefSharp.Wpf.Example.SimpleMainWindow"
+<Window x:Class="CefSharp.Wpf.Example.SimpleMainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
@@ -19,7 +19,10 @@
                          Margin="3" />
             <Separator />
             <!-- TODO: Could show hover link URL here -->
-            <TextBlock />
+            <StackPanel Orientation="Horizontal">
+                <Button x:Name="btnResize" Content="Quick resize" Click="btnResize_Click"/>
+            </StackPanel>
+            
         </StatusBar>
     </Grid>
 </Window>
