--- a/CefSharp.Wpf.Example/SimpleMainWindow.xaml
+++ b/CefSharp.Wpf.Example/SimpleMainWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="CefSharp.Wpf.Example.SimpleMainWindow"
+<Window x:Class="CefSharp.Wpf.Example.SimpleMainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
-        Title="SimpleMainWindow" WindowState="Maximized">
+        xmlns:controls="clr-namespace:CefSharp.Wpf.Example.Controls"
+        Title="SimpleMainWindow">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <wpf:ChromiumWebBrowser Grid.Row="0"
+        <controls:ChromiumWebBrowserIMESupport Grid.Row="0"
                           x:Name="Browser"
                           Address="http://www.google.com" />
         <StatusBar Grid.Row="1">
